[api] update swagger
