# api/docs/swagger.json
@@ -69,7 +69,7 @@
                     {
                         "type": "integer",
                         "description": "Query ID",
-                        "name": "queryID",
+                        "name": "id",
                         "in": "path"
                     }
                 ],
@@ -117,7 +117,7 @@
                     {
                         "type": "string",
                         "description": "Chat ID",
-                        "name": "chatID",
+                        "name": "id",
                         "in": "path"
                     }
                 ],
@@ -215,7 +215,7 @@
                     {
                         "type": "integer",
                         "description": "Chat ID",
-                        "name": "chatID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -271,7 +271,7 @@
                     {
                         "type": "string",
                         "description": "Chat ID",
-                        "name": "chatID",
+                        "name": "id",
                         "in": "path"
                     }
                 ],
